<resources>
    <!-- General -->
    <string name="app_name">Lyricist</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="add_new_song">Add new song</string>
    <string name="add_new_version">Add new version</string>
    <string name="delete">Delete</string>
    <string name="back_to_home">Back to Home</string>
    <string name="save">Save changes</string>
    <string name="creation_date">[Creation Date]</string>
    <string name="modified_date">[Modified Date]</string>

    <!-- Home screen -->
    <string name="search_songs">filter...</string>

    <!-- Help Screen -->
    <string name="welcome_banner">Lyricist</string>
    <string name="welcome_message">Welcome to \'Lyricist\'! This app was designed to help people who write songs store and work on these ideas from anywhere. Ideas suddenly surface, and if they are not written down, are lost forever. This app can prevent this catastrophe...</string>
    <string name="about_banner">About</string>
    <string name="about_message">As the inspiration leading to song-writing comes from many places, this app was designed to store ideas in the form of text, images, video, and audio, all in a single well organised and easily accessible place. This app started as a final university project and very quickly became so much more, it became something I and many others would actually use. Learn how the system works in the \'Instructions\' tab...</string>
    <string name="security_banner">Security</string>
    <string name="security_message">The security of your music was of serious concern. All data you store when using this app is on your phone and stays there. The app has no need to connect to the internet, giving piece of mind when using it. It can also be used regardless of connectivity mode. We all hate our data being sold or ideas stolen. With \' Lyricist\', your music is yours and yours alone...</string>
    <string name="acknowledgements_banner">Acknowledgements</string>
    <string name="acknowledgements_message">The eclipse icon of this app was found using the creative commons filter on Google and can be found on \'Picryl\' and \'stockvault\'. A big thank you to these sites for letting us use images such as these. All the icons used in this app were either built into Google\'s Android, or were purchased from \'Noun Project\', a big thank you to them as well. A massive thank you to my friend Luke for his input on the app and the idea of each song having it\'s own versions - friggin\' genius. I would like to thank Dublin City University, as this app began it\'s life as a final university project and quickly turned into a passion project which I am proud to share you creators such as yourself. A final thank you to my lovely wife, I love you very much ♡</string>
    <string name="getting_started_banner">Getting started</string>
    <string name="getting_started_message">This app organises music into songs, with each song containing various versions, each of which housing the components of the song. A very good friend who writes his own songs came up with this concept. This was done as firstly, songs have various versions (acoustic, rock, etc), and secondly, songs go through various forms as they develop - this app supports this. The app asks for your permission regarding 3 things (usage of the camera, storage, and audio recording) if you want to store more than just text, please accept all 3 and proceed. The app will not work if you attempt to store data for which you don\'t have enough free space. The app is only supported and developed for the portrait/vertical configuration and will not work correctly in landscape/horizontal mode...</string>
    <string name="how_to_create_banner">Creating</string>
    <string name="how_to_create_message">To create a song: (1) go to the home screen and click the plus icon. (2) go to the next screen and enter a name for this version of the song (\'V1\' is a classic) and enter any other ideas you want to save. (3) click the tick icon and save the data. You will now be brought to the viewing page, to make changes to this version, simply click the edit icon. Warning, all data on the add screen will be lost if the back arrow is clicked. The same will happen to any unsaved changes on the edit screen...</string>
    <string name="how_to_delete_banner">Deleting</string>
    <string name="how_to_delete_message">To delete a song or version. Simply go to the edit page and then click the bomb icon, you will then be taken to the delete confirmation page. Warning, when you see the explosion icon and you click it, the action is permanent, so be careful. To remove an image, video, or audio clip, select it on the add or edit screen, then click the explosion icon...</string>
    <string name="where_to_find_banner">Locating</string>
    <string name="where_to_find_message">All text is saved in a SQLite database in the app. None of the saved media is needed in the gallery, but rather in specific folders in the phone. Any saved media you do find in the standard gallery can be deleted without the data being lost in the app. This was done to keep these items safe from accidental deletion outside of the app. They can be accessed outside of the app though: Phone>Android>data>the.app.Lyricist>files. All items are saved in their own folders in the \'files\' directory and can be shared from here...</string>
    <string name="zombie_files_banner">Zombie data</string>
    <string name="zombie_files_message">Great care has been taken to avoid the creation of \'zombie data\'. This is data that is left over from operations and cannot be deleted from inside the app but still takes up space on the device. There is only one way zombie data is created on your phone, if it is added to the version (image, video, or audio) and the app is closed or you use the phone\'s default back arrow at the bottom of the screen and not the app\'s built in back arrow at the top left. This way the files are added to the phone in the specific folders, but the changes are not saved, leaving the lifeless data to simply take up space. This is avoided by firstly, always using the app\'s built-in buttons at the top of the screen when adding or editing, and secondly, going into the folders from time to time and removing any old files you now know are not used in the app...</string>

    <!-- Song handling -->
    <string name="song_name">song name...</string>
    <string name="edit_song_name">new song name...</string>
    <string name="toastr_missing_song_name">Please enter a song name...</string>
    <string name="toastr_unique_song_name">Please enter a unique song name...</string>
    <string name="toastr_song_and_version_added">A new song-writing journey begins...</string>
    <string name="delete_song_warning">Friggin\' sure you want to delete this song and all it\'s versions?</string>

    <!-- Version handling -->
    <string name="version_name">version name...</string>
    <string name="version">Version</string>
    <string name="version_description">description...</string>
    <string name="description">Description</string>
    <string name="version_lyrics">lyrics...</string>
    <string name="lyrics">Lyrics</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="audio">Audio Recordings</string>
    <string name="toastr_missing_version_name">Please enter a version name...</string>
    <string name="toastr_unique_version_name">Please enter a unique version name for this song...</string>
    <string name="toastr_new_version_created">New song version created...</string>
    <string name="toastr_version_updated">Song version updated...</string>
    <string name="toastr_permissions_warning">Please accept all permission prompts to use these features</string>
    <string name="toastr_no_camera_found">No camera was found...</string>
    <string name="toastr_no_recorder_found">No recording device was found...</string>
    <string name="delete_version_warning">Doubly sure you want to delete this version of your song?</string>

    <!-- Audio handling -->
    <string name="start_recording_message">Start recording...</string>
    <string name="end_recording_message">...end recording</string>
    <string name="play_recording_message">Play recording...</string>

</resources>