<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/screen_background">

        <TextView
            android:id="@+id/idTVVersionName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/version_name"
            android:textColor="@color/highlighted_text_yellow" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/idTVVersionCreationDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="@string/creation_date"
                android:textColor="@color/standard_text_dark_grey" />

            <TextView
                android:id="@+id/idTVVersionEditDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="3dp"
                android:gravity="end"
                android:text="@string/modified_date"
                android:textColor="@color/standard_text_dark_grey" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
