<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background"
    tools:context=".AddSongActivity">

    <ImageView
        android:id="@+id/idImgLyricist"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/solar_eclipse_image"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <TextView
        android:id="@+id/idTxtSongName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idImgLyricist"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:text="@string/song_name"
        android:textColor="@color/highlighted_text_yellow"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/idImgLyricist" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/idRVVersions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idTxtSongName"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTxtSongName" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/idBtnAddVersion"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:contentDescription="@string/add_new_version"
        app:fabCustomSize="57dp"
        android:scaleType="center"
        app:maxImageSize="40dp"
        app:srcCompat="@drawable/add_icon_black" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/idBtnEditSong"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:layout_above="@+id/idBtnAddVersion"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/edit"
        app:fabCustomSize="59dp"
        app:maxImageSize="38dp"
        app:srcCompat="@drawable/edit_icon_black"
        app:backgroundTint="@color/back_button" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/idBtnBackToHome"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="19dp"
        android:clickable="true"
        android:contentDescription="@string/back_to_home"
        android:scaleType="center"
        app:maxImageSize="47dp"
        app:srcCompat="@drawable/back_arrow_icon_black"
        app:backgroundTint="@color/back_button"/>

</RelativeLayout>
